07Nov99=======================================================================
1. reduced the amount of stuff compared against for dup announces.
2. Check the regex for DK0WCY announces produces results before storing it as
a WWV.
3. Added some logging for set/priv (un)set/lockout.
4. Added test long path calc to sh/muf
5. Only wonder down the msg queue every minute
6. Put in the initial DB code (at last), you can create and remove local and
standard remote dbs, you can import AK1A style .FUL ascii databases, you can
enquire on a local or remote database.
7. A return ping to a node will clear down all outstanding pings to
that node (which might cause some confusion if more then one ping is
outstanding for a node, but then - shit happens).
04Nov99=======================================================================
1. Removed ~ from the end of the PC18.
2. Removed a hangover from duff character checking in cluster.pl
3. Stop PC frames that are to be routed, being routed back to themselves.
03Nov99=======================================================================
1. Simplified command caching so it uses anonymous subroutines, you should
also get error messages back on the console now when developing.
2. Allow locally connected AK1A clusters that for some obscure reason don't
issue PC19s to still appear as connected and allow them to acquire users.
31Oct99=======================================================================
1. updated Minimuf.pm and show/muf.pl to the fixed versions sent to me by
Steve Franke K9AN. 
2. Made set/badnodes work, added show/badnodes. This is an interim fix until
input spot filtering works.
24Oct99=======================================================================
1. fixed announces so that nodes only get one of them (not two).
2. Altered the select timeouts to prevent apparent excessive CPU usage on
multiprocessor machines (or at least that is what seems to be the trouble
here). 